# docs/swagger.json
@@ -2298,6 +2298,15 @@
                         "description": "User ID",
                         "name": "X-User-ID",
                         "in": "header"
+                    },
+                    {
+                        "description": "MCP Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_handlers.MCPRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -2349,6 +2358,15 @@
                         "name": "name",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "MCP Request Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_handlers.MCPRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -3665,6 +3683,19 @@
                 "message": {
                     "type": "string"
                 }
+            }
+        },
+        "internal_handlers.MCPRequest": {
+            "type": "object",
+            "properties": {
+                "id": {},
+                "jsonrpc": {
+                    "type": "string"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "params": {}
             }
         },
         "internal_handlers.MCPResponse": {
